# nodus-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
docs/design/: 00-decisions.md  01-adapter-mapping.md  02-elicitation.md  03-transports.md  04-server-mode.md  05-deprecated-features.md  06-embedding-runtime-blockers.md
docs/governance/: TECH_DEBT.md
nodus_mcp_aindy/: __init__.py  client.py  naming.py  schema.py  server.py  tool.py
nodus_mcp_aindy/adapters/: syscall.py
src/nodus_mcp/: __init__.py  cli.py  client.py  codec.py  connection.py  http.py  nd.py  server.py  server_transport.py  stdio.py  transport.py
src/nodus_mcp/nd/: index.nd
src/nodus_mcp/protocol/: __init__.py  jsonrpc.py  messages.py
tests/: test_adapters.py  test_install_roundtrip.py  test_invariants.py  test_naming.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_de.py  test_phase_f.py  test_phase_g.py  test_phase_h.py  test_phase_i.py  test_phase_jk.py  test_phase_l.py  test_phase_m.py  test_schema.py  test_server.py  test_tool.py
